# adapter-access/adapter-openapi.yaml
@@ -175,6 +175,24 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AdminResponse'
+  /adapter/admin/phone-number:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getAdminByPhoneNumber
+      parameters:
+      - name: phoneNumber
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AdminResponse'
 components:
   schemas:
     AccountResponse:
@@ -319,4 +337,6 @@ components:
         post:
           type: string
         registration:
+          type: string
+        password:
           type: string
